--- a/WebPageInterface/templates/main_page_design.html
+++ b/WebPageInterface/templates/main_page_design.html
@@ -100,29 +100,15 @@
                               fill="currentColor"></path>
                     </svg><!-- <i class="fas fa-align-left"></i> -->
                 </button>
-                <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
-                        class="btn btn-dark d-inline-block d-lg-none ml-auto" data-target="#navbarSupportedContent"
-                        data-toggle="collapse" type="button">
-                    <svg aria-hidden="true" class="svg-inline--fa fa-align-justify fa-w-14" data-fa-i2svg=""
-                         data-icon="align-justify" data-prefix="fas" role="img" viewBox="0 0 448 512"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 84V44c0-8.837 7.163-16 16-16h416c8.837 0 16 7.163 16 16v40c0 8.837-7.163 16-16 16H16c-8.837 0-16-7.163-16-16zm16 144h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 256h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0-128h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
-                              fill="currentColor"></path>
-                    </svg><!-- <i class="fas fa-align-justify"></i> -->
-                </button>
             </div>
         </nav>
-        <div class="first_window">
-
+        <div class="control-table">
+            <div class="away-image"></div>
+            <div class="normal-image"></div>
+            <div class="intensive-image"></div>
+            <div class="boost-image"></div>
         </div>
-        <div class="away-image">
 
-        </div>
-<!--        <div class="flexbox-container">-->
-<!--            <div class="flexbox-item flexbox-item-1"></div>-->
-<!--            <div class="axis main-axis"></div>-->
-<!--            <div class="axis cross-axis"></div>-->
-<!--        </div>-->
     </div>
 </div>
 
