--- a/WebPageInterface/templates/login_page.html
+++ b/WebPageInterface/templates/login_page.html
@@ -1,6 +1,6 @@
 {% extends 'main_page_design.html' %}
 
-{% block content %}
-    <h1>Login page. Testing..</h1>
-{% endblock content %}
+{% block first_control %}
+    <div><h1>Welcome to Home project</h1></div>
+{% endblock first_control %}
 
