-solution to not working request GET/POST

--- a/WebPageInterface/templates/rekup.html
+++ b/WebPageInterface/templates/rekup.html
@@ -8,5 +8,5 @@
 {% endblock first_control %}
 
 {% block second_control %}
-    <div><h3>Testing phase</h3></div>
+    <div><h4>Here will be information</h4></div>
 {% endblock second_control %}
