-add prototype of sending comands while chosing options in page

--- a/WebPageInterface/templates/main_page_design.html
+++ b/WebPageInterface/templates/main_page_design.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
-
     {% if title %}
     <title>HomeProject - {{ title }}</title>
     {% else %}
@@ -30,6 +29,8 @@
     <script crossorigin="anonymous" defer
             integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
             src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"></script>
+    <script  src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
 
 </head>
 
