--- a/WebPageInterface/static/home2.css
+++ b/WebPageInterface/static/home2.css
@@ -217,18 +217,20 @@ a.article:hover {
   position: relative;
   background-color: #cccccc; /* Used if the image is unavailable */
   height: 70px; /* You must set a specified height */
-  width: 50px;
+  width: 60px;
   border: 1px solid black;
   margin: 5px;
   background-repeat: no-repeat; /* Do not repeat the image */
   background-position: center top;
 }
-.active {
+.active-mode {
     background-color: red;
 }
 
 .mode-name {
-  padding: 3px;
+  width: 100%;
+  text-align: center;
+  padding-bottom: 3px;
   position: absolute;
   bottom: 0px;
   font-size: 10px;
