--- a/WebPageInterface/templates/rekup.html
+++ b/WebPageInterface/templates/rekup.html
@@ -34,7 +34,7 @@ async function getRefreshData() {
 
 {% block second_control %}
 
-// TODO getRefreshData method should be invoked periodically to refresh rekup data.
+<!--TODO getRefreshData method should be invoked periodically to refresh rekup data.-->
 <div class="humidity-image"></div>
 <div class="income-temp-image"></div>
 <div class="filter-image"></div>
