--- a/WebPageInterface/templates/rekup.html
+++ b/WebPageInterface/templates/rekup.html
@@ -5,30 +5,7 @@
 <div class="mode-container" id="normal-image" onclick="changeMode('2', this.id)"><div class="mode-name">Normal</div></div>
 <div class="mode-container" id="intensive-image" onclick="changeMode('3', this.id)"><div class="mode-name">Intense</div></div>
 <div class="mode-container" id="boost-image" onclick="changeMode('4', this.id)"><div class="mode-name">Boost</div></div>
-<script>
-function changeMode(mode, elementId){
-       // FIX ME to check the response before performing any actions
-       var xhttp = new XMLHttpRequest();
-       xhttp.open("POST", `http://127.0.0.1:5000/rekuperatorius?mode=${mode}`, true);
-       xhttp.setRequestHeader("Access-Control-Allow-Origin", "true");
-       xhttp.send();
-       var currentActiveModeElements = document.getElementsByClassName("mode-container active-mode");
-       if (currentActiveModeElements.length > 0) {
-          currentActiveModeElements[0].classList.remove("active-mode");
-       }
-       document.getElementById(elementId).classList.add("active-mode");
-    }
-async function getRefreshData() {
- console.log("Hitted");
-   // const userAction = async () => {
-    const response = await fetch('http://127.0.0.1/rekuperatorius');
-    const myJson = await response.json(); //extract JSON from the http response
-    console.log(myJson);
-  // do something with myJson
-    // }
-   // console.log(userAction);
-}
-</script>
+<script src="static/control.js"></script>
 
 {% endblock first_control %}
 
@@ -39,4 +16,5 @@ async function getRefreshData() {
 <div class="income-temp-image"></div>
 <div class="filter-image"></div>
 <div class="eco-system-image"></div>
+
 {% endblock second_control %}
