--- a/WebPageInterface/templates/durys.html
+++ b/WebPageInterface/templates/durys.html
@@ -1,5 +1,5 @@
 {% extends 'main_page_design.html' %}
 
 {% block first_control %}
-    <div><h1>This is under constructions</h1></div>
+    <div><h1>Testing part...</h1></div>
 {% endblock first_control %}
