--- a/WebPageInterface/templates/main_page_design.html
+++ b/WebPageInterface/templates/main_page_design.html
@@ -3,6 +3,7 @@
 
 <head>
 
+    <link rel="shortcut icon" href="../static/control_images/favicon.ico" type="image/x-icon">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -11,6 +12,7 @@
     {% else %}
     <title>HomeProject</title>
     {% endif %}
+
 
     <!-- Bootstrap CSS CDN -->
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
@@ -29,7 +31,8 @@
     <script crossorigin="anonymous" defer
             integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
             src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"></script>
-    <script  src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="../../static/controls.js"></script>
 
 
 </head>
@@ -37,6 +40,7 @@
 <body>
 
 <div class="wrapper">
+
     <!-- Sidebar  -->
     <nav class="mCustomScrollbar _mCS_1 mCS-autoHide" id="sidebar" style="overflow: visible;">
         <div class="mCustomScrollBox mCS-minimal mCSB_vertical mCSB_outside" id="mCSB_1" style="max-height: none;"
