--- a/WebPageInterface/templates/rekup.html
+++ b/WebPageInterface/templates/rekup.html
@@ -1,20 +1,42 @@
 {% extends 'main_page_design.html' %}
 
 {% block first_control %}
-<div class="mode-container" id="away-image" onclick="changeMode('1', this.id)"><div class="mode-name">Away</div></div>
-<div class="mode-container" id="normal-image" onclick="changeMode('2', this.id)"><div class="mode-name">Normal</div></div>
-<div class="mode-container" id="intensive-image" onclick="changeMode('3', this.id)"><div class="mode-name">Intense</div></div>
-<div class="mode-container" id="boost-image" onclick="changeMode('4', this.id)"><div class="mode-name">Boost</div></div>
-<script src="static/control.js"></script>
+<div class="mode-desc" id="away-image" onclick="changeMode('1', this.id)">
+    <div class="mode-name">Away</div>
+</div>
+<div class="mode-desc" id="normal-image" onclick="changeMode('2', this.id)">
+    <div class="mode-name">Normal</div>
+</div>
+<div class="mode-desc" id="intensive-image" onclick="changeMode('3', this.id)">
+    <div class="mode-name">Intense</div>
+</div>
+<div class="mode-desc" id="boost-image" onclick="changeMode('4', this.id)">
+    <div class="mode-name">Boost</div>
+</div>
 
 {% endblock first_control %}
+
 
 {% block second_control %}
 
 <!--TODO getRefreshData method should be invoked periodically to refresh rekup data.-->
-<div class="humidity-image"></div>
-<div class="income-temp-image"></div>
-<div class="filter-image"></div>
-<div class="eco-system-image"></div>
+
+<div class="information-text" onclick="getRefreshData()">
+    <div id="humidity-image"></div>
+    <div class="reused-data-text">Humidity</div>
+    <div id="current-humidity"></div>
+</div>
+<div class="information-text">
+    <div id="income-temp-image"></div>
+    <div class="reused-data-text">Income temperature</div>
+</div>
+<div class="information-text">
+    <div id="filter-image"></div>
+    <div class="reused-data-text">Filter percentage</div>
+</div>
+<div class="information-text">
+    <div id="eco-system-image"></div>
+    <div class="reused-data-text">Eco / Heater</div>
+</div>
 
 {% endblock second_control %}
