--- a/WebPageInterface/templates/rekup.html
+++ b/WebPageInterface/templates/rekup.html
@@ -24,19 +24,28 @@
 <div class="information-text" onclick="getRefreshData()">
     <div id="humidity-image"></div>
     <div class="reused-data-text">Humidity</div>
-    <div id="current-humidity"></div>
+    <div class="mode2-name" id="current-humidity">data</div>
 </div>
 <div class="information-text">
     <div id="income-temp-image"></div>
-    <div class="reused-data-text">Income temperature</div>
+    <div class="reused-data-text">Income temp.</div>
+    <div class="mode2-name" id="current-supply">data</div>
 </div>
 <div class="information-text">
     <div id="filter-image"></div>
-    <div class="reused-data-text">Filter percentage</div>
+    <div class="reused-data-text">Filter</div>
+    <div class="mode2-name" id="current-filter">data</div>
 </div>
 <div class="information-text">
     <div id="eco-system-image"></div>
-    <div class="reused-data-text">Eco / Heater</div>
+    <div class="reused-data-text">Eco mode</div>
+    <div class="mode2-name" id="current-eco">data</div>
 </div>
+<div class="information-text">
+    <div id="heater-image"></div>
+    <div class="reused-data-text">Heater energy</div>
+    <div class="mode2-name" id="current-heater">data</div>
+</div>
+
 
 {% endblock second_control %}
