-edit to color current mode grid

--- a/WebPageInterface/templates/rekup.html
+++ b/WebPageInterface/templates/rekup.html
@@ -2,16 +2,16 @@
 
 {% block first_control %}
 
-<div class="mode-desc" id="away-image" onclick="changeMode('1', this.id)">
+<div class="mode-desc" id="away-image" onclick="changeMode('1')">
     <div class="mode-name">Away</div>
 </div>
-<div class="mode-desc" id="normal-image" onclick="changeMode('2', this.id)">
+<div class="mode-desc" id="normal-image" onclick="changeMode('2')">
     <div class="mode-name">Normal</div>
 </div>
-<div class="mode-desc" id="intensive-image" onclick="changeMode('3', this.id)">
+<div class="mode-desc" id="intensive-image" onclick="changeMode('3')">
     <div class="mode-name">Intense</div>
 </div>
-<div class="mode-desc" id="boost-image" onclick="changeMode('4', this.id)">
+<div class="mode-desc" id="boost-image" onclick="changeMode('4')">
     <div class="mode-name">Boost</div>
 </div>
 
